@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-13-13
+2014-10-09 David
+- add [[DEVEL]] tag for type definitions. psddlc will skip parseing of these
+  types by default. Users can give psddlc the -D option to force code generation
+  of the [[DEVEL]] types. See JIRA Issue PSAS-42
+
 Tag: V00-13-12
 2014-06-14 David
 - Translator backend: move default_psana.cfg into data subdir.
